{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 53,
  "lineage": "b3462e8a-32b1-6100-66d8-b31d2815b45e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-056da9f54ca34457b",
            "arn": "arn:aws:ec2:us-east-1:767397762089:elastic-ip/eipalloc-056da9f54ca34457b",
            "association_id": "eipassoc-06f43acb8041a828f",
            "domain": "vpc",
            "id": "eipalloc-056da9f54ca34457b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09f3b6dc0b7fc8a23",
            "private_dns": "ip-10-0-0-18.ec2.internal",
            "private_ip": "10.0.0.18",
            "public_dns": "ec2-52-2-76-38.compute-1.amazonaws.com",
            "public_ip": "52.2.76.38",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "multi-node-eks-nat-eip"
            },
            "tags_all": {
              "Name": "multi-node-eks-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397762089:internet-gateway/igw-088bc9f223239f20d",
            "id": "igw-088bc9f223239f20d",
            "owner_id": "767397762089",
            "tags": {
              "Name": "multi-node-eks-igw"
            },
            "tags_all": {
              "Name": "multi-node-eks-igw"
            },
            "vpc_id": "vpc-0ff00bf87107bb3ef"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-056da9f54ca34457b",
            "association_id": "eipassoc-06f43acb8041a828f",
            "connectivity_type": "public",
            "id": "nat-0540ed4ba1089d14c",
            "network_interface_id": "eni-09f3b6dc0b7fc8a23",
            "private_ip": "10.0.0.18",
            "public_ip": "52.2.76.38",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-042604afa2313fb20",
            "tags": {
              "Name": "multi-node-eks-nat"
            },
            "tags_all": {
              "Name": "multi-node-eks-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397762089:route-table/rtb-01674b6ff88ab9867",
            "id": "rtb-01674b6ff88ab9867",
            "owner_id": "767397762089",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0540ed4ba1089d14c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "multi-node-eks-private-rt"
            },
            "tags_all": {
              "Name": "multi-node-eks-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff00bf87107bb3ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397762089:route-table/rtb-0e6d4c54a0d9a4b75",
            "id": "rtb-0e6d4c54a0d9a4b75",
            "owner_id": "767397762089",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-088bc9f223239f20d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "multi-node-eks-public-rt"
            },
            "tags_all": {
              "Name": "multi-node-eks-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff00bf87107bb3ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031dc854d27e043ea",
            "route_table_id": "rtb-01674b6ff88ab9867",
            "subnet_id": "subnet-028fc03724841cc08"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ef1b0e412fa97ef",
            "route_table_id": "rtb-01674b6ff88ab9867",
            "subnet_id": "subnet-05d7e4dc7351548f7"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0820138d38b13553b",
            "route_table_id": "rtb-0e6d4c54a0d9a4b75",
            "subnet_id": "subnet-042604afa2313fb20"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3eac5eee9eddedf",
            "route_table_id": "rtb-0e6d4c54a0d9a4b75",
            "subnet_id": "subnet-0ef69790c4d88d68b"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397762089:security-group/sg-0ffaf6f6ecdd4a02b",
            "description": "EKS control plane security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ffaf6f6ecdd4a02b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow nodes to reach the control plane API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00b6f74897949cb04"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "multi-node-eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "767397762089",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "multi-node-eks-cluster-sg"
            },
            "tags_all": {
              "Name": "multi-node-eks-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff00bf87107bb3ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397762089:security-group/sg-00b6f74897949cb04",
            "description": "Security group for EKS self-managed worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00b6f74897949cb04",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow control plane to reach extension API servers running on nodes",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ffaf6f6ecdd4a02b"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow control plane to reach kubelet",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ffaf6f6ecdd4a02b"
                ],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "Allow nodes to talk to each other",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "multi-node-eks-node-sg",
            "name_prefix": "",
            "owner_id": "767397762089",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "multi-node-eks-node-sg",
              "kubernetes.io/cluster/multi-node-eks": "owned"
            },
            "tags_all": {
              "Name": "multi-node-eks-node-sg",
              "kubernetes.io/cluster/multi-node-eks": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff00bf87107bb3ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_from_node_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to reach the control plane API",
            "from_port": 443,
            "id": "sgrule-2170732849",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ffaf6f6ecdd4a02b",
            "security_group_rule_id": "sgr-0a3b02ae507499cd2",
            "self": false,
            "source_security_group_id": "sg-00b6f74897949cb04",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.cluster_sg",
            "aws_security_group.node_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1320697916",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00b6f74897949cb04",
            "security_group_rule_id": "sgr-0a9e45f1d935fc25f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.node_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_from_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow control plane to reach extension API servers running on nodes",
            "from_port": 443,
            "id": "sgrule-3542516991",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00b6f74897949cb04",
            "security_group_rule_id": "sgr-005979637cbb4b1f4",
            "self": false,
            "source_security_group_id": "sg-0ffaf6f6ecdd4a02b",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.cluster_sg",
            "aws_security_group.node_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_from_cluster_kubelet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow control plane to reach kubelet",
            "from_port": 1025,
            "id": "sgrule-411308161",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00b6f74897949cb04",
            "security_group_rule_id": "sgr-0b1f7aa58e6ba30e4",
            "self": false,
            "source_security_group_id": "sg-0ffaf6f6ecdd4a02b",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.cluster_sg",
            "aws_security_group.node_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_self_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to talk to each other",
            "from_port": 0,
            "id": "sgrule-1824045031",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00b6f74897949cb04",
            "security_group_rule_id": "sgr-010b1f57854373949",
            "self": false,
            "source_security_group_id": "sg-00b6f74897949cb04",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.node_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397762089:subnet/subnet-028fc03724841cc08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-028fc03724841cc08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397762089",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "multi-node-eks-private-us-east-1a",
              "kubernetes.io/cluster/multi-node-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "multi-node-eks-private-us-east-1a",
              "kubernetes.io/cluster/multi-node-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ff00bf87107bb3ef"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397762089:subnet/subnet-05d7e4dc7351548f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d7e4dc7351548f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397762089",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "multi-node-eks-private-us-east-1b",
              "kubernetes.io/cluster/multi-node-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "multi-node-eks-private-us-east-1b",
              "kubernetes.io/cluster/multi-node-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ff00bf87107bb3ef"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397762089:subnet/subnet-042604afa2313fb20",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-042604afa2313fb20",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397762089",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "multi-node-eks-public-us-east-1a",
              "kubernetes.io/cluster/multi-node-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "multi-node-eks-public-us-east-1a",
              "kubernetes.io/cluster/multi-node-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ff00bf87107bb3ef"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397762089:subnet/subnet-0ef69790c4d88d68b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef69790c4d88d68b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397762089",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "multi-node-eks-public-us-east-1b",
              "kubernetes.io/cluster/multi-node-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "multi-node-eks-public-us-east-1b",
              "kubernetes.io/cluster/multi-node-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ff00bf87107bb3ef"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397762089:vpc/vpc-0ff00bf87107bb3ef",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-053461c4dad9706b9",
            "default_route_table_id": "rtb-048ebe876197130be",
            "default_security_group_id": "sg-096eb1183cbdd756e",
            "dhcp_options_id": "dopt-0299ac58183577262",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ff00bf87107bb3ef",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-048ebe876197130be",
            "owner_id": "767397762089",
            "tags": {
              "Name": "multi-node-eks-vpc",
              "kubernetes.io/cluster/multi-node-eks": "shared"
            },
            "tags_all": {
              "Name": "multi-node-eks-vpc",
              "kubernetes.io/cluster/multi-node-eks": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}